cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This kitten carousel static website
Resources:
  myec2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-08e4e35cccc6189f4"
      InstanceType: "t2.micro"
      SecurityGroups:
        - !Ref mysecgroup
      UserData:
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            systemctl start httpd
            systemctl enable httpd
            cd /var/www/html
            wget https://raw.githubusercontent.com/MelekAlan/my-projects/main/aws/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
            wget https://raw.githubusercontent.com/MelekAlan/my-projects/main/aws/Project-101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/MelekAlan/my-projects/main/aws/Project-101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/MelekAlan/my-projects/main/aws/Project-101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
            wget https://raw.githubusercontent.com/MelekAlan/my-projects/main/aws/Project-101-kittens-carousel-static-website-ec2/static-web/cat3.png


  mysecgroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "enables ssh and http" # Required
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
        
        - CidrIp: "0.0.0.0/0"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
